--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-loading-indicators": "^1.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
